<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_azul_fondo"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cafe" />
        <Button
            android:id="@+id/button_inicio"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/imagenavview"
            android:textSize="22dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_perfil"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/perfil"
            android:textSize="22dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/button_favoritos"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/favoritos"
            android:textSize="22dp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/soporte"
            android:textSize="22dp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/compartir"
            android:textSize="22dp"
            android:textColor="@color/white"/>

    </LinearLayout>


</FrameLayout>